# mesa

./: configure.ac
docs/: GL3.txt
docs/relnotes/: 11.3.0.html  new_features.txt
include/vulkan/: vulkan_core.h
src/: Makefile.am
src/amd/: TODO
src/amd/common/: Makefile.am  Makefile.sources  ac_binary.c  ac_binary.h  ac_debug.c  ac_debug.h  ac_llvm_build.c  ac_llvm_helper.cpp  ac_llvm_util.c  ac_llvm_util.h  ac_nir_to_llvm.c  ac_nir_to_llvm.h  ac_radeon_winsys.h  ac_shader_info.c  ac_shader_info.h  ac_surface.c  ac_surface.h  sid.h
src/amd/compiler/: aco_instruction_selection.cpp  aco_instruction_selection_setup.cpp  aco_ir.h  aco_opcodes.py  aco_optimizer.cpp  aco_register_allocation.cpp  aco_validate.cpp
src/amd/vulkan/: .gitignore  Makefile.am  Makefile.sources  meson.build  radv_cmd_buffer.c  radv_cs.h  radv_descriptor_set.c  radv_descriptor_set.h  radv_device.c  radv_device_info.h  radv_entrypoints_gen.py  radv_extensions.py  radv_formats.c  radv_image.c  radv_meta.c  radv_meta.h  radv_meta_blit.c  radv_meta_blit2d.c  radv_meta_buffer.c  radv_meta_bufimage.c  radv_meta_clear.c  radv_meta_copy.c  radv_meta_decompress.c  radv_meta_fast_clear.c  radv_meta_resolve.c  radv_meta_resolve_cs.c  radv_nir_to_llvm.c  radv_pass.c  radv_physical_device.c  radv_pipeline.c  radv_pipeline_cache.c  radv_private.h  radv_query.c  radv_radeon_winsys.h  radv_shader.c  radv_shader.h  radv_shader_info.c  radv_util.c  radv_winsys.h  radv_wsi.c  (+7 more)
src/amd/vulkan/nir/: radv_nir_lower_cooperative_matrix.c
src/amd/vulkan/winsys/amdgpu/: radv_amdgpu_bo.c  radv_amdgpu_bo.h  radv_amdgpu_cs.c  radv_amdgpu_cs.h  radv_amdgpu_surface.c  radv_amdgpu_surface.h  radv_amdgpu_winsys.c  radv_amdgpu_winsys.h  radv_amdgpu_winsys_public.h
src/amd/vulkan/winsys/radeon/: radv_radeon_bo.c  radv_radeon_cs.c  radv_radeon_surface.c  radv_radeon_winsys.c  radv_radeon_winsys.h  radv_radeon_winsys_public.h
src/broadcom/compiler/: nir_to_vir.c
src/compiler/: Makefile.sources  glsl_types.cpp  glsl_types.h  nir_types.cpp  nir_types.h  shader_enums.c  shader_info.h
src/compiler/glsl/: ast_to_hir.cpp  gl_nir_link_uniform_initializers.c  gl_nir_lower_samplers.c  glsl_to_nir.cpp  ir_clone.cpp  ir_uniform.h  meson.build
src/compiler/nir/: meson.build  nir.c  nir.h  nir_algebraic.py  nir_builder.h  nir_builder_opcodes_h.py  nir_clone.c  nir_constant_expressions.py  nir_deref.c  nir_divergence_analysis.c  nir_gather_info.c  nir_instr_set.c  nir_intrinsics.py  nir_linking_helpers.c  nir_loop_analyze.c  nir_lower_alu_to_scalar.c  nir_lower_bool_to_int32.c  nir_lower_indirect_derefs.c  nir_lower_io.c  nir_lower_phis_to_scalar.c  nir_lower_vars_to_ssa.c  nir_opcodes.py  nir_opcodes_c.py  nir_opt_algebraic.py  nir_opt_constant_folding.c  nir_opt_copy_propagate.c  nir_opt_if.c  nir_opt_intrinsics.c  nir_opt_large_constants.c  nir_opt_peephole_select.c  nir_opt_undef.c  nir_print.c  nir_search.c  nir_serialize.c  nir_validate.c
src/compiler/nir/tests/: vars_tests.cpp
src/compiler/spirv/: meson.build  spirv_to_nir.c  vtn_alu.c  vtn_cfg.c  vtn_cooperative.c  vtn_private.h  vtn_variables.c
src/gallium/auxiliary/hud/: hud_context.c
src/gallium/auxiliary/nir/: tgsi_to_nir.c
src/gallium/docs/source/: screen.rst
src/gallium/drivers/ddebug/: dd_context.c
src/gallium/drivers/freedreno/: freedreno_screen.c
src/gallium/drivers/freedreno/ir3/: ir3_compiler_nir.c  ir3_nir.c
src/gallium/drivers/i915/: i915_screen.c
src/gallium/drivers/ilo/: ilo_screen.c
src/gallium/drivers/llvmpipe/: lp_screen.c
src/gallium/drivers/nouveau/nv30/: nv30_screen.c
src/gallium/drivers/nouveau/nv50/: nv50_screen.c
src/gallium/drivers/nouveau/nvc0/: nvc0_screen.c
src/gallium/drivers/r300/: r300_screen.c
src/gallium/drivers/r600/: r600_pipe.c  r600_texture.c
src/gallium/drivers/radeon/: r600_buffer_common.c  r600_pipe_common.c  r600_pipe_common.h  r600_query.c  r600_query.h  r600_texture.c  radeon_setup_tgsi_llvm.c  radeon_winsys.h
src/gallium/drivers/radeonsi/: Makefile.sources  cik_sdma.c  si_blit.c  si_buffer.c  si_compute.c  si_debug.c  si_descriptors.c  si_dma.c  si_hw_context.c  si_pipe.c  si_pipe.h  si_shader.c  si_shader.h  si_shader_cache.c  si_state.c  si_state.h  si_state_draw.c  si_state_shaders.c  si_texture.c  sid.h
src/gallium/drivers/softpipe/: sp_screen.c
src/gallium/drivers/svga/: svga_screen.c
src/gallium/drivers/swr/: swr_screen.cpp
src/gallium/drivers/v3d/: v3d_program.c
src/gallium/drivers/vc4/: vc4_program.c  vc4_screen.c
src/gallium/drivers/vc5/: vc5_program.c
src/gallium/drivers/virgl/: virgl_screen.c
src/gallium/include/pipe/: p_defines.h  p_state.h
src/gallium/winsys/amdgpu/drm/: amdgpu_bo.c  amdgpu_cs.c  amdgpu_cs.h  amdgpu_surface.c
src/gallium/winsys/radeon/drm/: radeon_drm_cs.c  (+1 more)
src/intel/blorp/: blorp.c  blorp_blit.c
src/intel/compiler/: brw_fs.h  brw_fs_nir.cpp  brw_nir.c  brw_shader.cpp  brw_vec4_nir.cpp  brw_vec4_visitor.cpp
src/intel/vulkan/: anv_pipeline.c
src/mesa/main/: extensions_table.h  mtypes.h  uniform_query.cpp  uniforms.c  uniforms.h
src/mesa/program/: ir_to_mesa.cpp  prog_parameter.c  prog_parameter.h  prog_statevars.c
src/mesa/state_tracker/: st_atom_constbuf.c  st_cb_texture.c  st_context.h  st_extensions.c  st_glsl_to_nir.cpp  st_program.c
src/vulkan/registry/: vk.xml
(+1 files in other folders)
